# Remus

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yaml  pre-commit.yaml
cmake/: CMakeLists.txt  clang_tidy.cmake  targets.cmake
cmd/: CMakeLists.txt
cmd/remus/: CMakeLists.txt
cmd/remus/src/: main.cpp
components/: CMakeLists.txt
components/core/: CMakeLists.txt
components/core/include/common/: error.hpp  logging.hpp  math.hpp
components/core/include/core/: window.hpp
components/core/include/events/: channel.hpp  event_bus.hpp
components/core/tests/: channel.test.cpp  event_bus.test.cpp
components/loaders/: CMakeLists.txt
components/loaders/include/loaders/models/: gltf_loader.hpp
components/loaders/src/: gltf_loader.cpp
components/loaders/tests/: gltf_loader.test.cpp
components/platform/: CMakeLists.txt
components/platform/include/platform/: platform.hpp
components/platform/src/: desktop_platform.cpp  glfw_window.cpp  glfw_window.hpp
components/rhi/: CMakeLists.txt
components/rhi/include/rhi/: rhi.hpp
components/rhi/include/rhi/opengl/: rhi.hpp
components/rhi/include/rhi/vulkan/: rhi.hpp
components/rhi/src/opengl/: buffers.cpp  primitives.cpp  rhi.cpp  shaders.cpp
components/rhi/src/vma/: vma.cpp
components/rhi/src/vulkan/: common.cpp  common.hpp  rhi.cpp
components/rhi/src/vulkan/context/: context.cpp  context.hpp  context_builder.cpp  context_builder.hpp  logger.cpp  logger.hpp
components/rhi/src/vulkan/pools/: memory_pool.cpp  memory_pool.hpp
components/scene_graph/: CMakeLists.txt
components/scene_graph/include/scene_graph/: node.hpp  scene_graph.hpp  transform.hpp
components/scene_graph/include/scene_graph/components/: material.hpp  static_mesh.hpp
components/scene_graph/src/: scene_graph.cpp
components/scene_graph/tests/: node.test.cpp  system.test.cpp
extras/: configure.py
extras/git/: install_hooks.py
extras/git/hooks/: pre-commit
scripts/: tracy.py
